--- a/jupytext/notebooks/test_jupytext.ipynb
+++ b/jupytext/notebooks/test_jupytext.ipynb
@@ -2,8 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "5b0ce2c5-0686-408a-8b77-dbc747215405",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ea2a7c69-5f2d-4263-b983-75d17d7b7847",
    "metadata": {},
    "outputs": [],
    "source": []
